--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="/">ngProducts</a>
+  <a class="navbar-brand" href="/">Productos Pajaro</a>
 </nav>
 
 <app-products></app-products>
