--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-body">
     <h6 class="text-center">
-      List of Products
+      Lista de Productos
     </h6>
     <table class="table table-sm table-hover">
       <tbody>
