--- a/src/app/components/products/product/product.component.html
+++ b/src/app/components/products/product/product.component.html
@@ -11,7 +11,7 @@
               name="name"
               #name="ngModel"
               [(ngModel)]="productService.selectedProduct.name"
-              placeholder="Add A Product"
+              placeholder="Agrega un producto"
               >
           </div>
           <div class="form-group">
@@ -21,7 +21,7 @@
                 name="category"
                 #category="ngModel"
                 [(ngModel)]="productService.selectedProduct.category"
-                placeholder="Add A Category"
+                placeholder="categoria del producto"
                 >
             </div>
           <div class="form-group">
@@ -31,7 +31,7 @@
               name="location"
               #location="ngModel"
               [(ngModel)]="productService.selectedProduct.location"
-              placeholder="Add A Location"
+              placeholder="localizacion del producto"
               >
           </div>
           <div class="form-group">
@@ -45,17 +45,17 @@
                 name="price"
                 #price="ngModel"
                 [(ngModel)]="productService.selectedProduct.price"
-                placeholder="Add A Price"
+                placeholder="Precio del producto"
                 >
             </div>
           </div>
 
           <div class="form-group">
             <button class="btn btn-primary" type="submit">
-                <i class="fas fa-plus-circle"></i> Add A Product
+                <i class="fas fa-plus-circle"></i> Agregar
             </button>
             <button class="btn btn-secondary" type="reset" (click)="resetForm(productForm)">
-                <i class="fas fa-sync-alt"></i> Reset
+                <i class="fas fa-sync-alt"></i> Limpiar
             </button>
           </div>
         </form>
